<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootLayout"
    >
    <ViewStub
        android:id="@+id/layout_stub"
        android:inflatedId="@+id/message_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <include android:visibility="gone" layout="@layout/error_layout" android:id="@+id/error_layout"/>
    <com.jpardogo.android.googleprogressbar.library.GoogleProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:id="@+id/loader_progress"
        />
</FrameLayout>