<?xml version="1.0" encoding="utf-8"?>
    <layout>
        <data>
            <import type="android.view.View"/>
            <variable
                name="newsList"
                type="comnewsapp.example.moham.newsapp.viewModels.newsList.NewsListViewModel"/>
        </data>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/news_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        OnScrollListener="@{newsList.listener}"
        IsPaging="@{newsList.isPaging}"
        />
    <ProgressBar
        android:layout_margin="@dimen/_5sdp"
        android:layout_gravity="center"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:visibility="@{newsList.loading?View.VISIBLE:View.GONE}"
        />

</LinearLayout>
</layout>